-  Added Radio Button for Gender.
 -  Added image viewer at create / Edit view.

--- a/Institution/Institution.csproj
+++ b/Institution/Institution.csproj
@@ -219,6 +219,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CommonProperties.cs" />
     <Compile Include="Models\InstitutionContext.cs" />
     <Compile Include="Models\Students.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
